Portfolio v2 Home UI

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,6 @@
-
-    <div class="flex-container">
-        <!-- Sidenav -->
-        <sidebar [sidebarTabs]="sidebarConfiguration.sidebarTabs"></sidebar>
-        <!-- SideNav end -->
-    </div>
-    <div style="margin-left: 70px;">
-        <router-outlet></router-outlet>
-    </div>
+<div class="flex-container">
+    <sidebar [sidebarTabs]="sidebarConfiguration.sidebarTabs"></sidebar>
+</div>
+<div class="content">
+    <router-outlet></router-outlet>
+</div>
