--- a/src/assets/scss/themes/_theme.scss
+++ b/src/assets/scss/themes/_theme.scss
@@ -1,6 +1,9 @@
 // * This file contain all the theming variables
-$primary : #0BB1E5;
+$primary : #FCA61F;
+$primary-light : #fee5b4;
 $primary-filter : invert(51%) sepia(95%) saturate(1010%) hue-rotate(155deg) brightness(94%) contrast(92%);
+$info : #00c2cb;
+$light-info: #d2f7ff;
 // $secondary : 
 $background-colour : #fff;
 $text-colour : #000;
