--- a/src/assets/scss/base/_reset.scss
+++ b/src/assets/scss/base/_reset.scss
@@ -30,3 +30,11 @@ body::-webkit-scrollbar-thumb {
 .loading{
     height: 50px;
 }
+
+h1, h2, h3, h4, h5, h6{
+    margin: 0px;
+}
+
+p{
+    margin: 0px;
+}
